major update (strapi -> hardcode)

--- a/magazines.html
+++ b/magazines.html
@@ -6,12 +6,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta property="og:title" content="Decrypt">
-    <meta property="og:description" content="CSI RAIT Decrypt 2021-22">
-    <meta property="og:image" content="https://i.imgur.com/ec2euE5.png">
+    <meta property="og:description" content="CSI RAIT Decrypt 2021-22 | Unravelling the Intricacies of Technology">
+    <meta property="og:image" content="https://i.imgur.com/HkOcqqy.png">
     <meta property="og:url" content="https://kaustubh0204.github.io/Decrypt/">
 
-    <title>Decrypt | Members</title>
-    <link rel="icon" href="assets/decrypt-logo-2.png" type="image/x-icon">
+    <title>Decrypt | Magazines</title>
+    <link rel="icon" href="assets/decrypt-logo-6.png" type="image/x-icon">
 
     <!--Bootstrap-->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet"
@@ -69,11 +69,15 @@
                             $(".logo").css({ "width": "40px" });
                             $(".logo2").css({ "height": "40px" });
                             $(".logo2").css({ "width": "40px" });
+                            $(".logox").css({ "height": "0px" });
+                            $(".logox").css({ "width": "0px" });
                         }
                         else {
                             $(".navbar").css({ "background-color": "" });
-                            $(".logo").css({ "height": "80px" });
-                            $(".logo").css({ "width": "80px" });
+                            $(".logox").css({ "height": "58px" });
+                            $(".logox").css({ "width": "197.8px" });
+                            $(".logo").css({ "height": "0px" });
+                            $(".logo").css({ "width": "0px" });
                             $(".logo2").css({ "height": "0px" });
                             $(".logo2").css({ "width": "0px" });
                         }
@@ -88,10 +92,16 @@
                 <nav class="navbar navbar-expand-lg navbar-dark fixed-top" style="margin: 0px;">
                     <div class="container-fluid">
                         <a class="navbar-brand" href="index.html">
-                            <img src="assets/csi-logo.png" alt="CSI" style="height: 80px; width: 80px; margin: 5px;"
+                            <img src="assets/decrypt-logo-5.png" alt="CSI"
+                                style="height: 58px; width: 197.8px; margin: 8px;"
+                                class="d-inline-block align-text-top logox">
+
+                            <img src="assets/decrypt-logo-6.png" alt="CSI" 
+                            style="height: 0px; width: 0px; margin: 5px;"
                                 class="d-inline-block align-text-top logo">
-                            <img src="assets/decrypt-logo-2.png" alt="Decrypt"
-                                style="height: 0px; width: 0px; margin: 5px;"
+
+                            <img src="assets/csi-logo.png" alt="Decrypt" 
+                            style="height: 0px; width: 0px; margin: 5px;"
                                 class="d-inline-block align-text-top logo2">
                         </a>
                         <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
@@ -105,24 +115,26 @@
 
                             </ul>
                             <ul class="navbar-nav ml-auto mb-2 mb-lg-0">
-                                <li class="nav-item" style="margin-right: 40px; font-size: 20px;">
-                                    <a class="nav-link active hover-up" aria-current="page" href="index.html"
-                                        style="font-size: 20px;">Home</a>
+                                <li class="nav-item" style="margin-right: 15px; font-size: 20px;">
+                                    <a class="nav-link active hover-up" aria-current="page" href="home.html"
+                                        style="font-size: 18px; font-weight: 300;">Home</a>
                                 </li>
-                                <li class="nav-item hover-up" style="margin-right: 40px; font-size: 20px;">
+                                <li class="nav-item hover-up"
+                                    style="margin-right: 15px; font-size: 18px; font-weight: 300;">
                                     <a class="nav-link active" aria-current="page" href="members.html">Members</a>
                                 </li>
-                                <li class="nav-item hover-up" style="margin-right: 40px; font-size: 20px;">
-                                    <a class="nav-link active" aria-current="page" href="blogs.html">Blogs</a>
+                                <li class="nav-item hover-up"
+                                    style="margin-right: 15px; font-size: 18px; font-weight: 300;">
+                                    <a class="nav-link active" aria-current="page" href="../category/1">Blogs</a>
                                 </li>
-                                <li class="nav-item hover-up glow"
-                                    style="margin-right: 40px; font-size: 20px; text-underline-offset: 10px">
-                                    <a class="nav-link active" aria-current="page"
-                                        href="magazines.html"><u>Magazines</u></a>
+                                <li class="nav-item hover-up"
+                                    style="margin-right: 15px; font-size: 18px; font-weight: 300;  text-underline-offset: 10px;">
+                                    <a class="nav-link active glow" aria-current="page" href="magazines.html"><u>Magazines</u></a>
                                 </li>
-                                <li class="nav-item hover-up" style="margin-right: 20px; font-size: 20px;">
+                                <li class="nav-item hover-up"
+                                    style="margin-right: 15px; font-size: 18px; font-weight: 300;">
                                     <a class="nav-link active" aria-current="page"
-                                        href="https://docs.google.com/forms/d/e/1FAIpQLSdTBRxhK4-hCE8y0r7wjfj1NHIwSuvVpZbYgClhUBeKDv_UDw/viewform?usp=sf_link">Write</a>
+                                        href="https://docs.google.com/forms/d/e/1FAIpQLSfNJOPOzVSevs6ANqISHJ0XcFHQRt1DiYknA0kHTTba2VaNIA/viewform">Write</a>
                                 </li>
 
                             </ul>
@@ -134,10 +146,11 @@
                 <div class="container-fluid banner3" style="padding: 20px;">
 
                     <div class="row">
+                        <div style="height: 100px;"></div>
                         <div class="col-10" style="margin-top: 10%;">
-                            <h1 style="font-size: 11.033vw; font-family: termina;">Magazines</h1>
+                            <h1 style="font-size: 9.033vw; font-family: termina;">Magazines</h1>
                         </div>
-                        <div style="height: 300px;"></div>
+                        <div style="height: 100px;"></div>
 
                     </div>
 
@@ -146,10 +159,10 @@
 
             </div>
 
-            <div style="height: 300px;"></div>
+            <div style="height: 70px;"></div>
 
             <!--Cozine-->
-            <h1 style="font-size: 10.033vw; text-align: center;" id="cozine"><br><i class="fas fa-book-open"
+            <h1 style="font-size: 7.033vw; text-align: center; font-family: termina;" id="cozine"><br><i class="fas fa-book-open"
                     style="color:#8854C8"></i>
                 Cozine
             </h1>
@@ -164,10 +177,10 @@
 
             </div>
 
-            <div style="height: 300px;"></div>
+            <div style="height: 100px;"></div>
 
             <!--Technophilia-->
-            <h1 style="font-size: 10.033vw; text-align: center;" id="technophilia"><br><i class="fas fa-book-open"
+            <h1 style="font-size: 7.033vw; text-align: center; font-family: termina;" id="technophilia"><br><i class="fas fa-book-open"
                     style="color: #E56C11"></i>
                 Technophilia
             </h1>
@@ -186,7 +199,7 @@
 
             <!--Footer-->
             <div class="container-fluid">
-                <h1 style="font-size: 10.033vw; text-align: center;"><i class="fas fa-phone-alt"
+                <h1 style="font-size: 3.033vw; text-align: center; font-family: termina;"><i class="fas fa-phone-alt"
                         style="color:#8854C8"></i>
                     Contact
                     us</h1>
@@ -340,17 +353,21 @@
             <script>
                 $(document).ready(function () {
                     $(window).scroll(function () {
-                        if ($(window).scrollTop() > 200) {
+                        if ($(window).scrollTop() > 100) {
                             $(".navbar").css({ "background-color": "black" });
                             $(".logo").css({ "height": "40px" });
                             $(".logo").css({ "width": "40px" });
                             $(".logo2").css({ "height": "40px" });
                             $(".logo2").css({ "width": "40px" });
+                            $(".logox").css({ "height": "0px" });
+                            $(".logox").css({ "width": "0px" });
                         }
                         else {
                             $(".navbar").css({ "background-color": "" });
-                            $(".logo").css({ "height": "80px" });
-                            $(".logo").css({ "width": "80px" });
+                            $(".logox").css({ "height": "38.666px" });
+                            $(".logox").css({ "width": "131.866px" });
+                            $(".logo").css({ "height": "0px" });
+                            $(".logo").css({ "width": "0px" });
                             $(".logo2").css({ "height": "0px" });
                             $(".logo2").css({ "width": "0px" });
                         }
@@ -364,11 +381,15 @@
 
                 <nav class="navbar navbar-expand-lg navbar-dark fixed-top" style="margin: 0px;">
                     <div class="container-fluid">
-                        <a class="navbar-brand" href="index.html">
-                            <img src="assets/csi-logo.png" alt="CSI" style="height: 70px; width: 70px; margin: 5px;"
+                        <a class="navbar-brand" href="home.html">
+                            <img src="assets/decrypt-logo-5.png" alt="CSI"
+                                style="height: 38.666px; width: 131.866px; margin: 8px;"
+                                class="d-inline-block align-text-top logox">
+
+                            <img src="assets/decrypt-logo-6.png" alt="CSI" style="height: 0px; width: 0px; margin: 5px;"
                                 class="d-inline-block align-text-top logo">
-                            <img src="assets/decrypt-logo-2.png" alt="Decrypt"
-                                style="height: 0px; width: 0px; margin: 5px;"
+
+                            <img src="assets/csi-logo.png" alt="Decrypt" style="height: 0px; width: 0px; margin: 5px;"
                                 class="d-inline-block align-text-top logo2">
                         </a>
                         <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
@@ -381,9 +402,9 @@
 
 
                             </ul>
-                            <ul class="navbar-nav ml-auto mb-2 mb-lg-0">
+                            <ul class="navbar-nav ml-auto mb-2 mb-lg-0" style="background-color: #212529; padding: 10px; border-radius: 4vw;">
                                 <li class="nav-item" style="margin-right: 40px; font-size: 20px;">
-                                    <a class="nav-link active hover-up" aria-current="page" href="index.html"
+                                    <a class="nav-link active hover-up" aria-current="page" href="home.html"
                                         style="font-size: 20px;">Home</a>
                                 </li>
                                 <li class="nav-item hover-up "
@@ -392,14 +413,14 @@
                                         href="members.html">Members</a>
                                 </li>
                                 <li class="nav-item hover-up" style="margin-right: 40px; font-size: 20px;">
-                                    <a class="nav-link active" aria-current="page" href="blogs.html">Blogs</a>
+                                    <a class="nav-link active" aria-current="page" href="../category/1">Blogs</a>
                                 </li>
                                 <li class="nav-item hover-up glow " style="margin-right: 40px; font-size: 20px; text-underline-offset: 10px;">
                                     <a class="nav-link active" aria-current="page" href="magazines.html"><u>Magazines</u></a>
                                 </li>
                                 <li class="nav-item hover-up" style="margin-right: 20px; font-size: 20px;">
                                     <a class="nav-link active" aria-current="page"
-                                        href="https://docs.google.com/forms/d/e/1FAIpQLSdTBRxhK4-hCE8y0r7wjfj1NHIwSuvVpZbYgClhUBeKDv_UDw/viewform?usp=sf_link">Write</a>
+                                        href="https://docs.google.com/forms/d/e/1FAIpQLSfNJOPOzVSevs6ANqISHJ0XcFHQRt1DiYknA0kHTTba2VaNIA/viewform">Write</a>
                                 </li>
 
                             </ul>
@@ -408,26 +429,64 @@
                     </div>
                 </nav>
 
-                <div class="container" style="text-align: center; margin-top: 5%;">
-                    <div style="height: 100px;">
+                <div class="container-fluid banner3" style="padding: 20px;">
+
+                    <div class="row">
+                        <div style="height: 100px;"></div>
+                        <div class="col-10" style="margin-top: 10%;">
+                            <h1 style="font-size: 9.033vw; font-family: termina;">Magazines</h1>
+                        </div>
+                        <div style="height: 50px;">
+
+                        </div>
 
                     </div>
-                    <i class="fas fa-exclamation-triangle" style="color: #8854C8; font-size: 25vh;"></i>
-                    <br><br><br><br>
-                    <h1 class="glow" style="font-family: 'Orbitron', sans-serif; font-size: 5vh;">Under<br>Development
-                    </h1>
+
                 </div>
             </div>
+            <div style="height: 100px;"></div>
+            <!--Cozine-->
+            <h1 style="font-size: 7.033vw; text-align: center; font-family: termina;" id="cozine"><i class="fas fa-book-open"
+                style="color:#8854C8"></i>
+            Cozine
+        </h1>
+        <hr>
+        <div class="container-fluid" style="padding: 20px;">
 
-            <div style="height: 300px;"></div>
+            <iframe class="container-fluid" 
+                src="https://online.anyflip.com/sught/vcns/index.html" sandboxscrolling="no" frameborder="0"
+                width="400" height="600" allowfullscreen="true" webkitallowfullscreen="true"
+                mozallowfullscreen="true" sandbox="allow-scripts"></iframe>
+
+        </div>
+
+        <div style="height: 100px;"></div>
+
+        <!--Technophilia-->
+        <h1 style="font-size: 7.033vw; text-align: center; font-family: termina;" id="technophilia"><br><i class="fas fa-book-open"
+                style="color: #E56C11"></i>
+            Technophilia
+        </h1>
+        <hr>
+        <br>
+        <div class="container-fluid" style="padding: 20px;">
+
+            <iframe class="container-fluid" style="margin: 0px; padding: 0px;"
+                src="https://online.anyflip.com/sught/iapf/index.html" sandboxscrolling="no" frameborder="0"
+                width="400" height="600" allowfullscreen="true" webkitallowfullscreen="true"
+                mozallowfullscreen="true" sandbox="allow-scripts"></iframe>
+
+        </div>
+
+        <div style="height: 100px;"></div>
 
             <!--Footer-->
             <div class="container-fluid">
-                <h1 style="font-size: 10.033vw; text-align: center;"><i class="fas fa-phone-alt"
+                <h1 style="font-size: 8.033vw; text-align: center;"><i class="fas fa-phone-alt"
                         style="color:#8854C8"></i>
                     Contact
                     us</h1>
-                <div style="height: 100px;"></div>
+                <div style="height: 40px;"></div>
                 <div class="row">
 
                     <div class="col-12">
@@ -460,7 +519,7 @@
                     <div class="col-5">
                         <div class="row">
                             <!-- <div class="col-6">
-                                <a href="https://kaustubh0204.github.io/Decrypt/"><img src="assets/decrypt-logo-2.png"
+                                <a href="https://kaustubh0204.github.io/Decrypt/"><img src="assets/decrypt-logo-6.png"
                                         class="img-fluid"></a>
                             </div> -->
                             <div class="col-2">
