--- a/blogs.html
+++ b/blogs.html
@@ -797,7 +797,7 @@
                     </a>
                     <a class="btn-lg hover-up col" onclick="switchCategory('computing')" style="margin-right: 10px; margin-bottom: 10px; text-align: center; 
                     text-decoration: none; background-color: #8854C8; color: white; font-size: 9px; border-radius: 5vw; 
-                    border: none; width: auto; height: auto; min-width: 60px; padding: 10px; padding-right: 40px;">
+                    border: none; width: auto; height: auto; min-width: 60px; padding: 10px;">
                         Computing
                     </a>
                     <a class="btn-lg hover-up col" onclick="switchCategory('businessmarket')" style="margin-right: 10px; margin-bottom: 10px; text-align: center; 
