--- a/blogs.html
+++ b/blogs.html
@@ -782,7 +782,7 @@
                     </a>
                     <a class="btn-lg hover-up col" onclick="switchCategory('electronicshardware')" style="margin-right: 10px; margin-bottom: 10px; text-align: center; 
                     text-decoration: none; background-color: #8854C8; color: white; font-size: 9px; border-radius: 5vw; 
-                    border: none; width: auto; height: auto; min-width: 60px; padding: 10px; padding-right: 25px;">
+                    border: none; width: auto; height: auto; min-width: 60px; padding: 10px;">
                         Electronics & Hardware
                     </a>
                     <a class="btn-lg hover-up col" onclick="switchCategory('spacetravel')" style="margin-right: 10px; margin-bottom: 10px; text-align: center; 
@@ -807,12 +807,12 @@
                     </a>
                     <a class="btn-lg hover-up col" onclick="switchCategory('technology')" style="margin-right: 10px; margin-bottom: 10px; text-align: center; 
                     text-decoration: none; background-color: #8854C8; color: white; font-size: 9px; border-radius: 5vw; 
-                    border: none; width: auto; height: auto; min-width: 60px; padding: 10px; padding-right: 40px;">
+                    border: none; width: auto; height: auto; min-width: 60px; padding: 10px; ">
                         Technology
                     </a>
                     <a class="btn-lg hover-up col" onclick="switchCategory('currentdevelopment')" style="margin-right: 10px; margin-bottom: 10px; text-align: center; 
                     text-decoration: none; background-color: #8854C8; color: white; font-size: 9px; border-radius: 5vw; 
-                    border: none; width: auto; height: auto; min-width: 60px; padding: 7px; padding-right: 40px;">
+                    border: none; width: auto; height: auto; min-width: 60px; padding: 7px;">
                         Current Development
                     </a>
                     <a class="btn-lg hover-up col" onclick="switchCategory('opinionpiece')" style="margin-right: 10px; margin-bottom: 10px; text-align: center; 
@@ -827,12 +827,12 @@
                     </a>
                     <a class="btn-lg hover-up col" onclick="switchCategory('experience')" style="margin-right: 10px; margin-bottom: 10px; text-align: center; 
                     text-decoration: none; background-color: #8854C8; color: white; font-size: 9px; border-radius: 5vw; 
-                    border: none; width: auto; height: auto; min-width: 60px; padding: 10px; padding-right: 40px;">
+                    border: none; width: auto; height: auto; min-width: 60px; padding: 10px; ">
                         Experience
                     </a>
                     <a class="btn-lg hover-up col" onclick="switchCategory('technologyenviornment')" style="margin-right: 10px; margin-bottom: 10px; text-align: center; 
                     text-decoration: none; background-color: #8854C8; color: white; font-size: 9px; border-radius: 5vw; 
-                    border: none; width: auto; height: auto; min-width: 60px; padding: 7px; padding-right: 45px;">
+                    border: none; width: auto; height: auto; min-width: 60px; padding: 7px; ">
                         Technology & Environment
                     </a>
                     <a class="btn-lg hover-up col" onclick="switchCategory('editorschoice')" style="margin-right: 10px; margin-bottom: 10px; text-align: center; 
