--- a/home.html
+++ b/home.html
@@ -125,7 +125,7 @@
                                 </li>
                                 <li class="nav-item hover-up"
                                     style="margin-right: 15px; font-size: 18px; font-weight: 300;">
-                                    <a class="nav-link active" aria-current="page" href="../category/1">Blogs</a>
+                                    <a class="nav-link active" aria-current="page" href="blogs.html">Blogs</a>
                                 </li>
                                 <li class="nav-item hover-up"
                                     style="margin-right: 15px; font-size: 18px; font-weight: 300;">
@@ -202,7 +202,7 @@
 
                 <!-- <div class="row">
                     <div class="col">
-                        <div class="card mb-3 container hover-up" onclick="location.href='../category/1';"
+                        <div class="card mb-3 container hover-up" onclick="location.href='blogs.html';"
                             style="background-color: black; max-width: 700px; padding: 0px; border-radius: 1vw; border-color: #8854C8; cursor: pointer;">
                             <img src="assets/datascience.jpg"
                                 style="max-width: 700px; max-height: 300px; border-top-left-radius: 1vw; border-top-right-radius: 1vw;"
@@ -245,7 +245,7 @@
                         </div>
                     </div>
                     <div class="col">
-                        <div class="card mb-3 container hover-up" onclick="location.href='../category/1';"
+                        <div class="card mb-3 container hover-up" onclick="location.href='blogs.html';"
                             style="background-color: black; max-width: 700px; padding: 0px; border-radius: 1vw; border-color: #8854C8; cursor: pointer;">
                             <img src="assets/artificialintelligence.jpg"
                                 style="max-width: 700px; max-height: 300px; border-top-left-radius: 1vw; border-top-right-radius: 1vw;"
@@ -289,7 +289,7 @@
                 <br>
                 <div class="row">
                     <div class="col">
-                        <div class="card mb-3 container hover-up" onclick="location.href='../category/1';"
+                        <div class="card mb-3 container hover-up" onclick="location.href='blogs.html';"
                             style="background-color: black; max-width: 700px; padding: 0px; border-radius: 1vw; border-color: #8854C8; cursor: pointer;">
                             <img src="assets/iot.jpg"
                                 style="max-width: 700px; max-height: 300px; border-top-left-radius: 1vw; border-top-right-radius: 1vw;"
@@ -331,7 +331,7 @@
                         </div>
                     </div>
                     <div class="col">
-                        <div class="card mb-3 container hover-up" onclick="location.href='../category/1';"
+                        <div class="card mb-3 container hover-up" onclick="location.href='blogs.html';"
                             style="background-color: black; max-width: 700px; padding: 0px; border-radius: 1vw; border-color: #8854C8; cursor: pointer;">
                             <img src="assets/machinelearning.jpg"
                                 style="max-width: 700px; max-height: 300px; border-top-left-radius: 1vw; border-top-right-radius: 1vw;"
@@ -383,7 +383,7 @@
                             <br>archive of
                             amazing technical articles.
                         </p><br>
-                        <a href="../category/1" class="btn btn-lg hover-up"
+                        <a href="blogs.html" class="btn btn-lg hover-up"
                             style="background-color: #8854C8; font-weight: 700;">See more</a>
                     </div>
 
@@ -663,7 +663,7 @@
                                     <a class="nav-link active" aria-current="page" href="members.html">Members</a>
                                 </li>
                                 <li class="nav-item hover-up" style="margin-right: 40px; font-size: 20px;">
-                                    <a class="nav-link active" aria-current="page" href="../category/1">Blogs</a>
+                                    <a class="nav-link active" aria-current="page" href="blogs.html">Blogs</a>
                                 </li>
                                 <li class="nav-item hover-up" style="margin-right: 40px; font-size: 20px;">
                                     <a class="nav-link active" aria-current="page" href="magazines.html">Magazines</a>
@@ -732,7 +732,7 @@
 
 
 
-                <!-- <div class="card mb-3 container hover-up" onclick="location.href='../category/1';"
+                <!-- <div class="card mb-3 container hover-up" onclick="location.href='blogs.html';"
                     style="background-color: black; max-width: 500px; padding: 0px; border-radius: 1vw; border-color: #8854C8; cursor: pointer;">
                     <img src="assets/datascience.jpg"
                         style="max-width: 500px; max-height: 300px; border-top-left-radius: 1vw; border-top-right-radius: 1vw;"
@@ -774,7 +774,7 @@
                 <br>
                 <br>
 
-                <div class="card mb-3 container hover-up" onclick="location.href='../category/1';"
+                <div class="card mb-3 container hover-up" onclick="location.href='blogs.html';"
                     style="background-color: black; max-width: 500px; padding: 0px; border-radius: 1vw; border-color: #8854C8; cursor: pointer;">
                     <img src="assets/artificialintelligence.jpg"
                         style="max-width: 500px; max-height: 300px; border-top-left-radius: 1vw; border-top-right-radius: 1vw;"
@@ -814,7 +814,7 @@
                 <br>
                 <br>
 
-                <div class="card mb-3 container hover-up" onclick="location.href='../category/1';"
+                <div class="card mb-3 container hover-up" onclick="location.href='blogs.html';"
                     style="background-color: black; max-width: 500px; padding: 0px; border-radius: 1vw; border-color: #8854C8; cursor: pointer;">
                     <img src="assets/iot.jpg"
                         style="max-width: 500px; max-height: 300px; border-top-left-radius: 1vw; border-top-right-radius: 1vw;"
@@ -854,7 +854,7 @@
                 <br>
                 <br>
 
-                <div class="card mb-3 container hover-up" onclick="location.href='../category/1';"
+                <div class="card mb-3 container hover-up" onclick="location.href='blogs.html';"
                     style="background-color: black; max-width: 500px; padding: 0px; border-radius: 1vw; border-color: #8854C8; cursor: pointer;">
                     <img src="assets/machinelearning.jpg"
                         style="max-width: 500px; max-height: 300px; border-top-left-radius: 1vw; border-top-right-radius: 1vw;"
@@ -907,7 +907,7 @@
                             <br>archive of
                             amazing technical articles.
                         </p><br>
-                        <a href="../category/1" class="btn btn-lg hover-up"
+                        <a href="blogs.html" class="btn btn-lg hover-up"
                             style="background-color: #8854C8; font-weight: 700;">See more</a>
                     </div>
 
