--- a/magazines.html
+++ b/magazines.html
@@ -125,7 +125,7 @@
                                 </li>
                                 <li class="nav-item hover-up"
                                     style="margin-right: 15px; font-size: 18px; font-weight: 300;">
-                                    <a class="nav-link active" aria-current="page" href="../category/1">Blogs</a>
+                                    <a class="nav-link active" aria-current="page" href="blogs.html">Blogs</a>
                                 </li>
                                 <li class="nav-item hover-up"
                                     style="margin-right: 15px; font-size: 18px; font-weight: 300;  text-underline-offset: 10px;">
@@ -413,7 +413,7 @@
                                         href="members.html">Members</a>
                                 </li>
                                 <li class="nav-item hover-up" style="margin-right: 40px; font-size: 20px;">
-                                    <a class="nav-link active" aria-current="page" href="../category/1">Blogs</a>
+                                    <a class="nav-link active" aria-current="page" href="blogs.html">Blogs</a>
                                 </li>
                                 <li class="nav-item hover-up glow " style="margin-right: 40px; font-size: 20px; text-underline-offset: 10px;">
                                     <a class="nav-link active" aria-current="page" href="magazines.html"><u>Magazines</u></a>
