--- a/members.html
+++ b/members.html
@@ -125,7 +125,7 @@
                                 </li>
                                 <li class="nav-item hover-up"
                                     style="margin-right: 15px; font-size: 18px; font-weight: 300;">
-                                    <a class="nav-link active" aria-current="page" href="../category/1">Blogs</a>
+                                    <a class="nav-link active" aria-current="page" href="blogs.html">Blogs</a>
                                 </li>
                                 <li class="nav-item hover-up"
                                     style="margin-right: 15px; font-size: 18px; font-weight: 300;">
@@ -1546,7 +1546,7 @@
                                         href="members.html"><u>Members</u></a>
                                 </li>
                                 <li class="nav-item hover-up" style="margin-right: 40px; font-size: 20px;">
-                                    <a class="nav-link active" aria-current="page" href="../category/1">Blogs</a>
+                                    <a class="nav-link active" aria-current="page" href="blogs.html">Blogs</a>
                                 </li>
                                 <li class="nav-item hover-up" style="margin-right: 40px; font-size: 20px;">
                                     <a class="nav-link active" aria-current="page" href="magazines.html">Magazines</a>
